# sheetable

./: Cargo.toml  LICENSE  README.md
sheetable/: Cargo.toml
sheetable-derive/: Cargo.toml
sheetable-derive/src/: lib.rs
sheetable-derive/tests/: derive_ok.rs
sheetable/src/: client.rs  errors.rs  lib.rs  traits.rs
sheetable/src/cell_encoding/: bool.rs  mod.rs  numeric.rs  option.rs  string.rs
src/: lib.rs  main.rs
src/cell_encoding/: mod.rs
src/providers/: google_sheets.rs  mod.rs
